--- a/cosBook/src/main/resources/application.properties
+++ b/cosBook/src/main/resources/application.properties
@@ -11,7 +11,8 @@ spring.datasource.username=user
 spring.datasource.password=1111
 
 
-spring.jpa.hibernate.ddl-auto=create #create,update,none
+#create,update,none
+spring.jpa.hibernate.ddl-auto=create 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
 
 
