--- a/cosBook/src/main/resources/application.properties
+++ b/cosBook/src/main/resources/application.properties
@@ -14,5 +14,5 @@ spring.datasource.password=1111
 #create,update,none
 spring.jpa.hibernate.ddl-auto=create 
 spring.jpa.hibernate.naming.physical-strategy=org.hibernate.boot.model.naming.PhysicalNamingStrategyStandardImpl
-
+spring.jpa.show-sql=true
 
